--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.22.8",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.0",
     "cdbreact": "^1.5.3",
+    "formik": "^2.2.9",
     "react": "^16.12.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-simple-image-slider": "^2.4.1"
+    "react-simple-image-slider": "^2.4.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.29",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
