--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "backend",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
+ 
   "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
+    "cloudinary": "^1.30.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "express-validator": "^6.14.0",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.3",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "mongoose": "^5.13.14",
+    "multer": "^1.4.4",
+    "serve-favicon": "^2.5.0",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.5.1",
+    "test": "^0.6.0",
+    "uuid": "^8.3.2",
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "concurrently": "^6.5.1",
+    "jest": "^28.1.0",
+    "nodemon": "^2.0.15"
   }
+
 }
