--- a/client/package.json
+++ b/client/package.json
@@ -1,29 +1,42 @@
 {
-  "name": "client",
+  "name": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
+    "@emailjs/browser": "^3.6.2",
+    "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@mui/lab": "^5.0.0-alpha.97",
+    "@mui/styles": "^5.10.3",
     "antd": "^4.22.8",
     "aos": "^2.3.4",
+    "axios": "^0.21.4",
     "bootstrap": "^5.2.0",
     "cdbreact": "^1.5.3",
     "formik": "^2.2.9",
-    "react": "^16.12.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^16.12.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "material-paper": "^0.0.8",
+    "moment": "^2.29.4",
+    "parcel": "^2.5.0",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-data-table-component": "^7.5.3",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^4.0.3",
+    "react-scroll-to-bottom": "^4.2.0",
+    "react-select": "^5.3.2",
     "react-simple-image-slider": "^2.4.1",
-    "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.4.29",
+    "react-spinners": "^0.13.4",
+    "reactstrap": "^9.1.4",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.16",
+    "uuid": "^3.4.0",
+    "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -33,7 +46,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -46,6 +62,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
