--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@emotion/styled": "^11.10.4",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/lab": "^5.0.0-alpha.97",
-    "@mui/styles": "^5.10.3",
     "antd": "^4.22.8",
     "aos": "^2.3.4",
     "axios": "^0.21.4",
