--- a/client/package.json
+++ b/client/package.json
@@ -3,40 +3,50 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^5.10.4",
+    "antd": "^4.23.0",
+    "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "cdbreact": "^1.5.3",
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.8.2",
+    "formik": "^2.2.9",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.24",
+    "material-paper": "^0.0.8",
+    "material-table": "^1.69.3",
+    "mdb-react-ui-kit": "^4.2.0",
     "mdb-ui-kit": "^4.1.0",
+    "moment": "^2.29.4",
     "parcel": "^2.6.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.34.2",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scroll-to-bottom": "^4.1.2",
-    "react-spinners": "^0.12.0",
-    "reactstrap": "^9.0.3",
-    "styled-components": "^5.3.5",
-    "sweetalert2": "^11.4.15",
-    "aos": "^2.3.4",
-    "bootstrap": "^5.2.0",
-    "cdbreact": "^1.5.3",
-    "formik": "^2.2.9",
-    "material-paper": "^0.0.8",
-    "material-table": "^1.69.3",
-    "moment": "^2.29.4",
-    "prop-types": "^15.8.1",
     "react-scripts": "^4.0.3",
+    "react-scroll-to-bottom": "^4.1.2",
     "react-select": "^5.3.2",
     "react-simple-image-slider": "^2.4.1",
+    "react-spinners": "^0.12.0",
+    "react-toastify": "^9.0.8",
+    "reactstrap": "^9.1.4",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.15",
     "uuid": "^3.4.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
