--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.2.0",
     "cdbreact": "^1.5.3",
-
+    "formik": "^2.2.9",
     "material-paper": "^0.0.8",
     "mdb-react-ui-kit": "^4.2.0",
     "moment": "^2.29.4",
@@ -28,6 +28,7 @@
     "react-select": "^5.3.2",
     "react-simple-image-slider": "^2.4.1",
     "react-spinners": "^0.13.4",
+    "react-toastify": "^8.0.3",
     "reactstrap": "^9.1.4",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
@@ -35,7 +36,7 @@
     "sweetalert2": "^11.4.16",
     "uuid": "^3.4.0",
     "web-vitals": "^2.1.4",
-
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
