--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
     "@hookform/resolvers": "^2.9.7",
     "antd": "^4.22.8",
     "aos": "^2.3.4",
