--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
