--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- 
   "author": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,17 +21,17 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
     "multer": "^1.4.4",
+    "nodemon": "^2.0.15",
     "serve-favicon": "^2.5.0",
     "socket-io": "^1.0.0",
     "socket.io": "^4.5.1",
+    "stripe": "^10.13.0",
     "test": "^0.6.0",
-    "uuid": "^8.3.2",
-    "nodemon": "^2.0.15"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "concurrently": "^6.5.1",
     "jest": "^28.1.0",
     "nodemon": "^2.0.15"
   }
-
 }
