--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-select": "^5.3.2",
     "react-simple-image-slider": "^2.4.1",
     "react-spinners": "^0.13.4",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^8.2.0",
     "reactstrap": "^9.1.4",
     "redux": "^4.1.2",
