--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^5.13.14",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
