--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
