--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,8 +7,12 @@
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.5.0",
     "antd": "^4.22.8",
     "aos": "^2.3.4",
     "axios": "^0.21.4",
@@ -22,13 +26,14 @@
     "mdb-react-ui-kit": "^4.2.0",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
+    "react": "^17.0.1",
     "react-bootstrap": "^2.5.0",
     "react-data-table-component": "^7.5.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^7.29.0",
     "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.3.1",
+    "react-material-ui-carousel": "^3.3.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
